[workspace]
members = [
  "api",
  "stream",
  "sharding",
  "endpoint",
  "protocol",
  "agent",
  "net",
  "discovery",
  "context",
  "log",
  "metrics",
  "ds",
  "rt",
  "tests",
  "tests_integration",
]

exclude = ["api", "tests", "tests_integration"]


[profile.release-test]
inherits = "release"

[profile.release]
panic = "abort"
overflow-checks = false
debug = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"

[profile.release-perf]
inherits = "release"
strip = "none"
codegen-units = 256


[workspace.dependencies]
tokio = { version = "1.28.1", features = ["rt", "fs", "net", "rt-multi-thread", "time"], default-features = false }
serde = { version = "1.0.126", features = ["derive"], default-features = false }
async-trait = "0.1.68"