[workspace]
resolver = "2"
members = [
  "api",
  "stream",
  "sharding",
  "endpoint",
  "protocol",
  "agent",
  "net",
  "discovery",
  "context",
  "log",
  "metrics",
  "ds",
  "rt",
  "procs",
  "tests",
  "tests_integration",
]
default-members = ["agent"]

[profile.release-test]
inherits = "release"

[profile.release]
panic = "abort"
overflow-checks = false
debug = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "none"


[profile.release-stable]
inherits = "release"
strip = "symbols"

[profile.release-perf]
inherits = "release"
strip = "none"
codegen-units = 256


[workspace.dependencies]
tokio = { version = "1.32", features = ["rt", "fs", "net", "rt-multi-thread", "time", "sync", "signal"], default-features = false }
serde = { version = "1.0.126", features = ["derive"], default-features = false }
