[package]
name = "agent"
version = "0.0.1"
authors = ["icy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
context = { path = "../context" }
sharding = { path = "../sharding" }
net = { path = "../net"}
protocol = { path = "../protocol" }
endpoint = { path = "../endpoint" }
discovery = { path = "../discovery" }
log = { path = "../log" }
stream = { path = "../stream" }
metrics = { path = "../metrics" }
rt = { path = "../rt" }
ds = { path = "../ds" }
#[cfg(feature = "console-api")]
api = { path = "../api" }

backtrace = "0.3.63"
lazy_static = "1.4.0"

tokio.workspace = true
once_cell = "*"

rlimit = "0.8.3"

# rocket for restful api
rocket = { version = "0.5.0-rc.3", features = [], default-features = false }
#rocket_async_compression = "0.1.2"
reqwest = { version = "0.11.4", default-features = false }


[features]
console-api = []
