[package]
name = "agent"
version = "0.0.1"
authors = ["icy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
context = { path = "../context" }
sharding = { path = "../sharding" }
net = { path = "../net"}
protocol = { path = "../protocol" }
endpoint = { path = "../endpoint" }
discovery = { path = "../discovery" }
log = { path = "../log" }
stream = { path = "../stream" }
metrics = { path = "../metrics" }
rt = { path = "../rt" }
ds = { path = "../ds" }
api = { path = "../api", optional = true}

backtrace = "0.3.63"
lazy_static = "1.4.0"

tokio.workspace = true
tokio-util = {version = "0.7.8", features = ["io"]}

once_cell = "*"
rlimit = "0.8.3"

# rocket for restful api
rocket = { version = "0.5.0-rc.3", features = [], default-features = false , optional = true}
#rocket_async_compression = "0.1.2"
reqwest = { version = "0.11.4", default-features = false }

hyper = { version = "0.14",  features = ["server", "stream"]}


[features]
default = ["http"]
http = []
console-api = ["dep:rocket", "dep:api"]
