[package]
name = "agent"
version = "0.0.1"
authors = ["icy"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
context = { path = "../context" }
sharding = { path = "../sharding" }
net = { path = "../net"}
protocol = { path = "../protocol" }
endpoint = { path = "../endpoint" }
discovery = { path = "../discovery" }
log = { path = "../log" }
stream = { path = "../stream" }
metrics = { path = "../metrics" }
rt = { path = "../rt" }
ds = { path = "../ds" }

backtrace = { version = "0.3.63", optional = true }
lazy_static = "1.4.0"

tokio.workspace = true
tokio-util = {version = "0.7.8", features = ["io"]}

once_cell = "*"
rlimit = "0.8.3"

hyper = { version = "0.14",  features = ["server", "stream", "tcp", "client"]}


[features]
default = ["http"]
http = []
panic-hook = ["dep:backtrace"]
