[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
context = { path = "../context" }
metrics = { path = "../metrics" }
log = { path = "../log"  }
#log = "0.4.14"
tokio.workspace = true

trust-dns-resolver = "0.23.0"

# rocket for restful api
rocket = { version = "0.5.0-rc.3", features = ["json"], default-features = false }
lazy_static = "1.4.0"

# for serde json
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.65"

redis = { version = "0.22.0", features = [], default-features = false }
memcache = { version = "*", features = [], default-features = false }
