[package]
name = "context"
version = "0.1.0"
authors = ["icy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#log = { path = "../log" }

clap = {version = "3.0.0-rc.9", features = ["derive"] }
url = "2.2.2"
tokio = { version = "1.15.0", features = ["fs"] }
log = "0.4.14"

[features]
listen-all = []
