[package]
name = "context"
version = "0.1.0"
authors = ["icy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { path = "../log" }
ds = { path = "../ds" }

clap = {version = "4.4.2", features = ["derive", "std"], default-features = false}
url = "2.2.2"
git-version = "0.3.5"
lazy_static = "1.4.0"
tokio.workspace = true

[features]
listen-all = []
