[package]
name = "discovery"
version = "0.1.0"
authors = ["icy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { path = "../log" }
ds = { path = "../ds" }
metrics = { path = "../metrics" }

url = "2.2.2"
async-trait = "0.1.51"
enum_dispatch = "0.3.8"

#for http request and json parse
reqwest = { version = "0.11.4", features = ["json"], default-features = false }
#tokio = { version = "1.24.2", features = ["fs"] }
tokio = { version = "1.24.2", features = ["rt", "net", "rt-multi-thread", "time"], default-features = false }
json = "0.12.4"

#for deserialize
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
serde_yaml = "0.8.17"
serde_json = "1.0.65"
rand = "0.8.4"
md5 = "0.7"
bs58 = "0.4"
trust-dns-resolver = "0.22.0"
once_cell = "1.14.0"
noop-waker = "0.1.0"
ctor = "*"
