[package]
name = "discovery"
version = "0.1.0"
authors = ["icy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { path = "../log" }
ds = { path = "../ds" }
metrics = { path = "../metrics" }

url = "2.2.2"
enum_dispatch = "0.3.8"

hyper = { version = "0.14",  features = ["stream", "client", "tcp", "http1"]}
tokio.workspace = true

#for deserialize
serde.workspace = true
serde_derive = "1.0.126"
serde_yaml = "0.8.17"
serde_json = "1.0.65"
rand = "0.8.4"
md5 = "0.7"
bs58 = "0.4"
once_cell = "1.14.0"
noop-waker = "0.1.0"
ctor = "*"
libc = "*"
byteorder = "*"
dns-parser = "*"
