[package]
name = "ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { path = "../log" }
minstant = "*"
tokio = { version = "1.24.2", features = ["rt", "net", "rt-multi-thread", "time"], default-features = false }

byteorder = "1.4.3"
rand = "0.8.4"
#atomic-waker = "*"
mimalloc = { version = "0.1.34", default-features = false }
cache-padded = "1.2.0"
ctor = "*"

[features]
default = ["heap-stats", "tsc"]
heap-stats = []
tsc = []
trace = []
