[package]
name = "endpoint"
version = "0.1.0"
authors = ["icy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net = { path = "../net"}
discovery = { path = "../discovery" }
protocol = { path = "../protocol" }
pool = { path = "../pool"}
hash = { path = "../hash" }
stream = { path = "../stream" }

tokio = { version = "1", features = ["full"] }
bb8 = "*"
byteorder = "*"
bytes = "1"
futures = "*"

#for deserialize
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.8"
