[package]
name = "endpoint"
version = "0.1.0"
authors = ["icy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ds = { path = "../ds" }
net = { path = "../net"}
discovery = { path = "../discovery" }
protocol = { path = "../protocol" }
sharding = { path = "../sharding" }
stream = { path = "../stream" }
#log = { path = "../log" }
log = "0.4.14"

tokio = "1.12.0"
byteorder = "1.4.3"
bytes = "1.0.1"

enum_dispatch = "0.3.7"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
serde_yaml = "0.8.17"
#serde_json = "1.0.65"
rand = "0.8.4"
futures = "0.3.16"
