[package]
name = "endpoint"
version = "0.1.0"
authors = ["icy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ds = { path = "../ds" }
net = { path = "../net"}
discovery = { path = "../discovery" }
protocol = { path = "../protocol" }
sharding = { path = "../sharding" }
log = { path = "../log" }
rt = { path = "../rt" }
context = { path = "../context" }

byteorder = "1.4.3"
bytes = "1.0.1"
tokio.workspace = true
serde.workspace = true
base64 = "0.21.0"

enum_dispatch = "0.3.8"
serde_derive = "1.0.126"
serde_yaml = "0.8.17"
serde_json = "1.0.65"
rand = "0.8.4"
chrono = "0.4"
chrono-tz = { version = "0.5", default-features = false }

spin = "*"
cfg-if = "1.0.0"



[features]
mq = []
