[package]
name = "log"
version = "0.1.0"
authors = ["icy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 版本号指定详见https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
elog = { package = "log", version = "=0.4.20" }
log4rs = { version = "1.0.0", features = ["gzip"] }

[features]
enable-log = []
