[package]
name = "metrics"
version = "0.1.0"
authors = ["mingzhe10"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ds = { path = "../ds" }

once_cell = "1.8.0"
local-ip-address = "0.4.2"
tokio = {version = "1.15.0", features = ["full"] }
lazy_static = "1.4.0"
futures = "0.3.16"
log = "0.4.14"
array-init = "2"
psutil = { version = "3.2.1", default-features = false, features = ["cpu", "process"] }
