[package]
name = "metrics"
version = "0.1.0"
authors = ["mingzhe10"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ds = { path = "../ds" }
context = { path = "../context" }
log = { path = "../log" }

once_cell = "1.14.0"
local-ip-address = "0.4.2"
lazy_static = "1.4.0"
array-init = "2"
psutil = { version = "3.2.1", default-features = false, features = ["cpu", "process"] }
tokio.workspace = true
enum_dispatch = "0.3.8"

[features]
mock-local-ip = []
encode-addr = []
