[package]
name = "pool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
tokio = { version = "1.5.0", features = ["full"]}
bb8 = "*"

net = { path = "../net" }
protocol = { path = "../protocol" }
