[package]
name = "protocol"
version = "0.1.0"
authors = ["icy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ds = { path = "../ds" }
metrics = { path = "../metrics" }
sharding = { path = "../sharding" }
log = { path = "../log" }

enum_dispatch = "0.3.7"
lazy_static = "1.4.0"
rand = "0.8.4"

tokio = {version = "1.21.2", features = ["rt", "net", "rt-multi-thread", "time", "macros"]}
ctor = "0.1.23"
