[package]
name = "protocol"
version = "0.1.0"
authors = ["icy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ds = { path = "../ds" }
metrics = { path = "../metrics" }
sharding = { path = "../sharding" }
log = { path = "../log" }

enum_dispatch = "0.3.8"
lazy_static = "1.4.0"
rand = "0.8.4"

ctor = "0.1.23"
array-init = "2"

rust-crypto = "0.2.36"
