[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
log = "0.4.14"
futures = "0.3.17"
protocol = { path = "../protocol" }
metrics = { path = "../metrics" }
ds = { path = "../ds" }

noop-waker = "0.1.0"
