[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
protocol = { path = "../protocol" }
metrics = { path = "../metrics" }
ds = { path = "../ds" }
log = { path = "../log" }

noop-waker = "0.1.0"
