[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
metrics = { path = "../metrics" }
ds = { path = "../ds" }
log = { path = "../log" }
ctor = "*"

noop-waker = "0.1.0"
tokio.workspace = true

[features]
default = ["poll-io-metrics"]
poll-io-metrics = []
