[package]
name = "sharding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "*"
rust-crypto = "0.2.36"
log = "0.4.14"
ds = { path = "../ds" }
discovery = { path = "../discovery" }
metrics = { path = "../metrics" }


rand = "0.8.4"
once_cell = "1.8.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
serde_yaml = "0.8.17"
serde_json = "1.0.65"
