[package]
name = "sharding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.8"
md5 = "*"
ds = { path = "../ds" }
discovery = { path = "../discovery" }
metrics = { path = "../metrics" }
log = { path = "../log" }
context = { path = "../context" }

rand = "0.8.4"
