[package]
name = "stream"
version = "0.1.0"
authors = ["icycrystal4"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
sharding = { path = "../sharding" }
ds = { path = "../ds" }
metrics = { path = "../metrics" }
discovery = { path = "../discovery" }
rt = { path = "../rt" }

log = "0.4.14"
futures = "0.3.17"
futures-task = "0.3.17"
rand = "0.8.4"
enum_dispatch = "0.3.7"
bytes = "1.0.1"
byteorder = "1.4.3"
crossbeam-channel = "0.5.1"
atomic-waker = "1"
noop-waker = "0.1.0"
once_cell = "1.8.0"
array-init = "2"
tokio = "1.15.0"
