[package]
name = "stream"
version = "0.1.0"
authors = ["icycrystal4"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
sharding = { path = "../sharding" }
ds = { path = "../ds" }
metrics = { path = "../metrics" }
discovery = { path = "../discovery" }
endpoint = { path = "../endpoint" }
rt = { path = "../rt" }
log = { path = "../log" }

enum_dispatch = "0.3.8"
noop-waker = "0.1.0"
array-init = "2"
ctor = "0.1.23"

tokio.workspace = true

[features]
trace = []
