[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ds = { path = "../ds" }
sharding = { path = "../sharding" }
stream = { path = "../stream" }
protocol = { path = "../protocol" }
rand = "0.8.4"
rust-crypto = "0.2.36"
byteorder = "1.4.3"
bmemcached = "0.5.0"

tokio = { version = "1.21.2", features = ["fs"] }
redis = { version = "0.22.0", default-features = false, features = [] }
