[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ds = { path = "../ds", default-features = false, features = [] }
rt = { path = "../rt", default-features = false, features = [] }

sharding = { path = "../sharding" }
stream = { path = "../stream" }
protocol = { path = "../protocol" }
discovery = { path = "../discovery" }
rand = "0.8.5"
md5 = "*"
byteorder = "1.4.3"
assert-panic = "1.0.1"
metrics = { path = "../metrics" }
endpoint = { path = "../endpoint" }

tokio.workspace = true
ctor = "0.1.23"
mysql_async ="0.31.3"
chrono = "0.4"

mysql = "*"
base64 = "0.21.0"
bytes = "1.0"

proptest = "1.0"

[dev-dependencies.criterion]
version = "0.4"
[dev-dependencies.minstant]
version = "*"


[[test]]
name = "test_all"
path = "src/all.rs"

[[bench]]
name = "criterion"
path = "src/benches/criterion.rs"
harness = false

[features]
default = ["layout-max", "regex"]
layout-min = ["ds/tsc"]
layout-max = ["rt/poll-io-metrics"]
regex = ["protocol/regex"]
