[package]
name = "tests_ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rust-crypto = "0.2.36"
byteorder = "1.4.3"
memcache = "0.16.0"
assert-panic = "1.0.1"
function_name = "0.3.0"

tokio = { version = "1.21.2", features = ["fs"] }
redis = { version = "0.22.0", default-features = false, features = [] }

[[test]]
name = "test_all"
path = "src/all.rs"